--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>git Lecture 2014 pre</title>
 </head>
 <body>
-XMLProの2014年のgitのプレ講義のhtmlファイルです．
+XMLProの2014年のgitのプレ講義のhtmlファイルです．<br />
+講義中に追加した部分です．
 </body>
 </html>
